# EduuRobot

./: .deepsource.toml  .editorconfig  .gitignore  CODEOWNERS  LICENSE  LICENSE.md  README.md  README.rst  backups.py  bot.py  config.py.example  consts.py  crowdin.yml  db_handler.py  dbh.py  get_strings.py  keyboard.py  localization.py  pyproject.toml  requirements.txt  utils.py  version.txt
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: check-commit-name.yml  codeql-analysis.yml  python-tests.yml  run-bot.yml
aiml/: antichato.aiml
eduu/: __init__.py  __main__.py  bot.py  config.py.example
eduu/database/: __init__.py  admins.py  chats.py  common.py  core.py  custom_filters.py  database_handler.py  dbh.py  localization.py  notes.py  restarted.py  rules.py  warns.py  welcome.py
eduu/plugins/: __init__.py  admin.py  cats.py  chats.py  cmds_list.py  coub.py  custom_filters.py  dice.py  dogs.py  error_message_callback.py  gif.py  git.py  github.py  hastebin.py  ids.py  info.py  inline_search.py  inlines.py  ip.py  jsondump.py  langs.py  misc.py  nekobin.py  notes.py  pastes.py  ping.py  prints.py  pypi.py  reddit.py  rules.py  sed.py  start.py  stickers.py  sudos.py  telegraph.py  tiorunexec.py  translate.py  warns.py  weather.py  welcome.py  (+1 more)
eduu/utils/: __init__.py  bot_error_log.py  consts.py  decorators.py  localization.py  utils.py
langs/af/: start.json
langs/en/: inline_buttons.json  start.json
langs/es/: main.json
langs/pt/: inline_buttons.json  main.json  start.json
locales/: ar-SA.json  base.pot  bn-BD.json  ckb-IR.json  cs-CZ.json  da-DK.json  de-DE.json  en-GB.json  en-US.json  eo-XX.json  es-ES.json  fi-FI.json  fr-FR.json  he-IL.json  id-ID.json  it-IT.json  ja-JP.json  nl-NL.json  no-NO.json  pl-PL.json  plugins.start.pot  pt-BR.json  pt-BR@formal.json  pt-BR@informal.json  ro-RO.json  ru-RU.json  sv-SE.json  tr-TR.json  uk-UA.json  uz-UZ.json  zh-CN.json  zh-TW.json
locales/af-ZA/: main.json
locales/ar-SA/: admin.json  admins.json  cats.json  cmds_list.json  coub.json  custom_filters.json  dice.json  dogs.json  general.json  gif.json  git.json  github.json  ids.json  info.json  inlines.json  ip.json  jsondump.json  langs.json  main.json  misc.json  notes.json  pastes.json  ping.json  prints.json  pypi.json  rules.json  sed.json  start.json  stickers.json  strings.json  sudos.json  telegraph.json  tiorunexec.json  translate.json  warns.json  weather.json  welcome.json  youtube.json
locales/bn-BD/: main.json
locales/ckb-IR/: admin.json  admins.json  cats.json  cmds_list.json  coub.json  custom_filters.json  dice.json  dogs.json  general.json  gif.json  git.json  github.json  ids.json  info.json  inlines.json  ip.json  jsondump.json  langs.json  main.json  misc.json  notes.json  pastes.json  ping.json  prints.json  pypi.json  rules.json  sed.json  start.json  stickers.json  sudos.json  telegraph.json  tiorunexec.json  translate.json  warns.json  weather.json
locales/cs-CZ/: admin.json  admins.json  cats.json  dice.json  dogs.json  general.json  gif.json  langs.json  main.json  pypi.json  sed.json  start.json  sudos.json  translate.json  weather.json
locales/da-DK/: admin.json  admins.json  cats.json  dice.json  general.json  gif.json  langs.json  main.json  pypi.json  sed.json  start.json  sudos.json  translate.json  weather.json
locales/de-DE/: admin.json  admins.json  cats.json  cmds_list.json  coub.json  custom_filters.json  dice.json  dogs.json  general.json  gif.json  git.json  github.json  ids.json  info.json  inlines.json  ip.json  jsondump.json  langs.json  main.json  misc.json  notes.json  pastes.json  ping.json  prints.json  pypi.json  rules.json  sed.json  start.json  stickers.json  strings.json  sudos.json  telegraph.json  tiorunexec.json  translate.json  warns.json  weather.json  welcome.json  youtube.json
locales/el-GR/: plugins.start.json
locales/en-GB/: admin.json  admins.json  cats.json  cmds_list.json  coub.json  custom_filters.json  dice.json  dogs.json  general.json  gif.json  git.json  github.json  ids.json  info.json  inline_search.json  inlines.json  ip.json  jsondump.json  langs.json  main.json  misc.json  notes.json  pastes.json  ping.json  prints.json  pypi.json  reddit.json  rules.json  sed.json  start.json  stickers.json  strings.json  sudos.json  telegraph.json  tiorunexec.json  translate.json  warns.json  weather.json  welcome.json  youtube.json  (+1 more)
locales/en-US/: admin.json  cats.json  cmds_list.json  dice.json  (+18 more)
plugins/: __init__.py  admin.py  admins.py  antichato.py  antiflood.py  antipedro.py  cats.py  chats.py  clima.py  cmds_list.py  coub.py  custom_filters.py  dados.py  dice.py  diversos.py  dogbin.py  dogs.py  filters.py  gif.py  git.py  hastebin.py  id.py  ids.py  info.py  inlines.py  ip.py  jsondump.py  kibe.py  langs.py  misc.py  nekobin.py  notes.py  ping.py  prints.py  processamsg.py  processmsg.py  pypi.py  reddit.py  rextester.py  rules.py  (+16 more)
tests/: test_start.py
(+589 files in other folders)
