[project]
name = "eduu"
version = "0.0.0"
description = "A multipurpose Telegram Bot made with Pyrogram and asynchronous programming."
readme = "README.rst"

dependencies = [
  "gpytranslate==1.5.1",
  "httpx[http2]>=0.18.1,<1.0.0",
  "humanfriendly",
  "meval==2.5",
  "Pillow>=8.4.0,<11.0.0",
  # Using Amano's Pyrogram fork
  "pyrogram @ https://github.com/AmanoTeam/pyrogram/archive/master.zip",
  "pytio",
  "regex",
  "speedtest-cli",
  "tgcrypto",
  # Using uvloop to increase general speed and stability. Ignored under Windows
  "uvloop>=0.10.0,<1.0.0; platform_system != 'Windows'",
  "yarl",
  "yt-dlp==2023.11.14",
]
requires-python = ">=3.7"

authors = [{ name = "Amano LLC", email = "contact@amanoteam.com" }]
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
homepage = "https://github.com/AmanoTeam/EduuRobot"

[tool.ruff]
src = ["."]
target-version = "py37"
select = ["ALL"]
ignore = [
  "ANN204", # Missing return type annotation for special method
  "ARG001", # Unused function argument
  "COM812", # Trailing comma missing
  "D100",   # Missing docstring
  "D103",   # Missing docstring
  "EM",     # flake8-errmsg
  "RET502", # Do not implicitly `return None` in function able to return non-`None` value
  "RET503", # Missing explicit `return` at the end of function able to return non-`None` value
  "RUF001", # String contains ambiguous unicode character
]
