[project]
name = "eduu"
version = "0.0.0"
description = "A multipurpose Telegram Bot made with Pyrogram and asynchronous programming."
readme = "README.rst"

dependencies = [
  "gpytranslate==1.5.1",
  "httpx[http2]>=0.18.1,<1.0.0",
  "humanfriendly",
  "meval==2.5",
  "Pillow>=8.4.0,<11.0.0",
  # Using Amano's Pyrogram fork
  "pyrogram @ https://github.com/AmanoTeam/pyrogram/archive/master.zip",
  "pytio",
  "regex",
  "speedtest-cli",
  "tgcrypto",
  # Using uvloop to increase general speed and stability. Ignored under Windows
  "uvloop>=0.10.0,<1.0.0; platform_system != 'Windows'",
  "yarl",
  "yt-dlp==2024.4.9",
]
requires-python = ">=3.8"

authors = [{ name = "Amano LLC", email = "contact@amanoteam.com" }]
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
homepage = "https://github.com/AmanoTeam/EduuRobot"

[tool.ruff]
line-length = 99
target-version = "py38"
select = [
    "I",    # isort
    "E",    # pycodestyle
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "F",    # pyflakes
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "PERF", # perflint
    "N",    # pep8-naming
    "RUF",  # ruff
    "G",    # flake8-logging-format
    "TID",  # flake8-tidy-imports
]
ignore = ["RUF001", "RUF002", "RUF003", "E203", "PERF203"]
preview = true

[tool.ruff.isort]
known-first-party = ["eduu"]
