[project]
name = "eduu"
version = "0.0.0"
description = "A multipurpose Telegram Bot made with Hydrogram and asynchronous programming."
readme = "README.rst"

dependencies = [
  "emoji-regex",
  "gpytranslate==1.5.1",
  "httpx[http2]>=0.27.0,<1.0.0",
  "humanfriendly",
  "hydrogram @ https://github.com/hydrogram/hydrogram/archive/dev.zip",
  "meval==2.5",
  "Pillow>=10.3.0,<11.0.0",
  "pytio",
  "regex",
  "speedtest-cli",
  "tgcrypto",
  # Using uvloop to increase general speed and stability. Ignored under Windows
  "uvloop>=0.19.0,<1.0.0; platform_system != 'Windows'",
  "yarl",
  "yt-dlp==2024.7.1",
]
requires-python = ">=3.10"

authors = [{ name = "Amano LLC", email = "contact@amanoteam.com" }]
license = { text = "MIT" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project.urls]
homepage = "https://github.com/AmanoTeam/EduuRobot"

[tool.ruff]
line-length = 99
target-version = "py310"
preview = true

[tool.ruff.lint]
select = [
    "FURB", # refurb
    "I",    # isort
    "E",    # pycodestyle: error
    "W",    # pycodestyle: warning
    "UP",   # pyupgrade
    "F",    # pyflakes
    "SIM",  # flake8-simplify
    "RET",  # flake8-return
    "C4",   # flake8-comprehensions
    "PTH",  # flake8-use-pathlib
    "PERF", # perflint
    "N",    # pep8-naming
    "RUF",  # ruff
    "G",    # flake8-logging-format
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
    "FA",   # flake8-future-annotations
    "PL",   # pylint
]
ignore = [
    "RUF001",
    "RUF002",
    "RUF003",
    "E203",
    "PERF203",
    "PLR09",
    "PLR2004",
    "PLR1702",
    "PLW1514",
    "PLW2901",
    "PLW0603",
]

[tool.ruff.lint.isort]
known-first-party = ["eduu"]
